Added assimp library support. Added swizzle and xxhash switches to be used in Image class.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,9 @@ OSG_OPTION(OSG_ENABLE_OGL3_PROTOS "" OFF)
 OSG_OPTION(OSG_ENABLE_OGL4_PROTOS "" OFF)
 OSG_OPTION(OSG_ENABLE_OGLES_PROTOS "" OFF)
 
+OSG_OPTION(OSG_ENABLE_TEXTURE_SWIZZLE  "" OFF)
+OSG_OPTION(OSG_ENABLE_XXHASH  "" OFF)
+
 OSG_OPTION(OSG_ENABLE_GL_INCLUDE_GLEW "" OFF)
 
 OSG_SET_CACHE(OSG_SHADER_CACHE_MODE 5 STRING "")
@@ -241,6 +244,14 @@ ENDIF(OSG_ENABLE_OGL4_PROTOS)
 IF(OSG_ENABLE_OGL_ES2_SIMGL3)
   SET(OSG_OGL_ES2_SIMGL3 1)
 ENDIF(OSG_ENABLE_OGL_ES2_SIMGL3)
+
+IF(OSG_ENABLE_TEXTURE_SWIZZLE)
+  SET(OSG_OGL_TEXTURE_SWIZZLE 1)
+ENDIF(OSG_ENABLE_TEXTURE_SWIZZLE)
+
+IF(OSG_ENABLE_XXHASH)
+  SET(OSG_USE_XXHASH 1)
+ENDIF(OSG_ENABLE_XXHASH)
 
 IF(OSGCOMPAT_ENABLE)
   SET(OSG_1_COMPAT 1)
@@ -806,6 +817,16 @@ IF(NOT OSG_BUILD_DEPENDEND)
     OSG_ADD_OPT(OSG_QHULL_FOUND)
     OSG_ADD_OPT(OSG_QHULL_INCLUDE_DIR)
     OSG_ADD_OPT(OSG_QHULL_LIBRARIES)
+    
+    ############
+    #### Assimp
+    ############
+
+    OSG_CONFIGURE_ASSIMP()
+
+    OSG_ADD_OPT(OSG_ASSIMP_FOUND)
+    OSG_ADD_OPT(OSG_ASSIMP_INCLUDE_DIR)
+    OSG_ADD_OPT(OSG_ASSIMP_LIBRARIES)
 
     #############
     #### Python
@@ -1349,6 +1370,7 @@ IF(OSGBUILD_EXAMPLES_ADVANCED)
     ADD_SUBDIRECTORY("Examples/Advanced")
     ADD_SUBDIRECTORY("Examples/Advanced/DeferredShading")
     ADD_SUBDIRECTORY("Examples/Advanced/Character")
+    ADD_SUBDIRECTORY("Examples/Advanced/Work")
     ADD_DEPENDENCIES(OSGAllExamples OSGAllAdvancedExamples)
 ENDIF(OSGBUILD_EXAMPLES_ADVANCED)
 
